[gd_scene load_steps=3 format=3 uid="uid://cbkk1ut6e81c0"]

[ext_resource type="PackedScene" uid="uid://5xfk0ysf13j4" path="res://menus/controls_settings/controls_setup_action/controls_setup_action.tscn" id="1_8cmok"]
[ext_resource type="Script" uid="uid://1jkn8ui2ioae" path="res://menus/controls_settings/controls_setup_player/controls_setup_player.gd" id="1_bcllm"]

[node name="ControlsSetupPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bcllm")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="ActionContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="InputDevice" type="HBoxContainer" parent="ScrollContainer/ActionContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/ActionContainer/InputDevice"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 8
text = "Input Device"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeviceDropdown" type="OptionButton" parent="ScrollContainer/ActionContainer/InputDevice"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 8
selected = 0
item_count = 1
popup/item_0/text = "Keyboard"
popup/item_0/id = 0

[node name="DetectButton" type="Button" parent="ScrollContainer/ActionContainer/InputDevice"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Detect"

[node name="Left" parent="ScrollContainer/ActionContainer" instance=ExtResource("1_8cmok")]
layout_mode = 2
action = "left"
text = "Left"

[node name="Right" parent="ScrollContainer/ActionContainer" instance=ExtResource("1_8cmok")]
layout_mode = 2
action = "right"
text = "Right"

[node name="Up" parent="ScrollContainer/ActionContainer" instance=ExtResource("1_8cmok")]
layout_mode = 2
action = "up"
text = "Up"

[node name="Down" parent="ScrollContainer/ActionContainer" instance=ExtResource("1_8cmok")]
layout_mode = 2
action = "down"
text = "Down"

[node name="Jump" parent="ScrollContainer/ActionContainer" instance=ExtResource("1_8cmok")]
layout_mode = 2
action = "jump"
text = "Jump"

[node name="Dash" parent="ScrollContainer/ActionContainer" instance=ExtResource("1_8cmok")]
layout_mode = 2
action = "dash"
text = "Dash"

[node name="Attack" parent="ScrollContainer/ActionContainer" instance=ExtResource("1_8cmok")]
layout_mode = 2
action = "attack"
text = "Attack"

[node name="Skill" parent="ScrollContainer/ActionContainer" instance=ExtResource("1_8cmok")]
layout_mode = 2
action = "skill"
text = "Skill"

[node name="Upper" parent="ScrollContainer/ActionContainer" instance=ExtResource("1_8cmok")]
layout_mode = 2
action = "upper"
text = "Upper"

[node name="Guard" parent="ScrollContainer/ActionContainer" instance=ExtResource("1_8cmok")]
layout_mode = 2
action = "guard"
text = "Guard"

[node name="Pause" parent="ScrollContainer/ActionContainer" instance=ExtResource("1_8cmok")]
layout_mode = 2
action = "pause"
text = "Pause"

[connection signal="item_selected" from="ScrollContainer/ActionContainer/InputDevice/DeviceDropdown" to="." method="_on_device_dropdown_item_selected"]
[connection signal="pressed" from="ScrollContainer/ActionContainer/InputDevice/DeviceDropdown" to="." method="_on_device_dropdown_pressed"]
[connection signal="pressed" from="ScrollContainer/ActionContainer/InputDevice/DetectButton" to="." method="_on_detect_button_pressed"]
